# Gravitacek-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.h
docs/: Doxyfile
include/gravitacek2/: mymath.hpp  setup.hpp
include/gravitacek2/chaos/: linearized_evolution.hpp
include/gravitacek2/geomotion/: geomotion.hpp  majumadpapapetrouweyl.hpp  spacetimes.hpp  weyl.hpp
include/gravitacek2/integrator/: event.hpp  integrator.hpp  odesystem.hpp  odesystems.hpp  stepcontrollerbase.hpp  stepcontrollers.hpp  stepperbase.hpp  steppers.hpp
include/gravitacek2/odesolver/: event.hpp  integrator.hpp  ode.hpp  stepcontroller.hpp  stepcontroller_types.hpp  steper_types.hpp  stepper.hpp
include/interface/: interface.hpp  usefullfunctions.hpp
src/gravitacek2/: mymath.cpp  setup.cpp
src/gravitacek2/chaos/: linearized_evolution.cpp
src/gravitacek2/geomotion/: combinedmpw.cpp  combinedweyl.cpp  geomotion.cpp  majumdarpapapetrouweyl.cpp  weyl.cpp
src/gravitacek2/geomotion/spacetimes/: bachweylring.cpp  invertedkuzmintoomredisk.cpp  invertedmorganmorgandisk.cpp  majumdarpapapetrouring.cpp  reissnernordstrommpw.cpp  schwarzschild.cpp  weylschwarzschild.cpp
src/gravitacek2/integrator/: event.cpp  integrator.cpp  odesystem.cpp  odesystems.cpp  stepcontrollerbase.cpp  stepperbase.cpp
src/gravitacek2/integrator/stepcontrollers/: standardstepcontroller.cpp  stepcontrollernr.cpp
src/gravitacek2/integrator/steppers/: dopr853.cpp  rk4.cpp
src/gravitacek2/odesolver/: event.cpp  integrator.cpp  ode.cpp  stepcontroller.cpp  stepper.cpp
src/gravitacek2/odesolver/stepcontroller_types/: standardstepcontroller.cpp  stepcontrollernr.cpp
src/gravitacek2/odesolver/stepper_types/: dopr853.cpp  rk4.cpp
src/interface/: interface.cpp
src/interface/data/: help.txt
tests/: CMakeLists.txt  test_chaos.cpp  test_integrator.cpp  test_integratorcomponents.cpp  test_majumdarpapapetrouwspacetimes.cpp  test_mymath.cpp  test_odesolver.cpp  test_spacetimes.cpp  test_spacetimetrajectories.cpp  test_stepcontrollertypes.cpp  test_steppertypes.cpp  test_weylspacetimes.cpp
tests/data/: schwarzschild.txt
tests/test_majumdarpapapetrouwspacetime/: majumdarpapapetrouring.txt  reissnernordstrom.txt  rnmpr.txt
tests/test_spacetime/: mp.txt  schwarzschild.txt  weyl.txt
tests/test_weylspacetime/: bachweylring.txt  invertedkuzmintoomredisk1.txt  invertedkuzmintoomredisk3.txt  invertedmorganmorgandisk1.txt  invertedmorganmorgandisk3.txt  schwarzschildbachweyl.txt  weylschwarzschild.txt
